# poetry-cli-template

./: .gitignore  .pylintrc  README.md  pyproject.toml
name_of_tool/: __init__.py  __main__.py  main.py
