[tool.poetry]
name = "name-of-tool" # REPLACE name-of-tool
version = "0.1.0"
description = ""
authors = ["Troy Havelock <troy.havelock@snyk.io>"]
readme = "README.md"
packages = [{include = "name_of_tool"}] # REPLACE name_of_tool

[tool.poetry.scripts]
name-of-tool = "name_of_tool.main:run" # REPLACE name-of-tool & name_of_tool

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
